Fixed store items alignment

--- a/ecommerce/static/css/main.css
+++ b/ecommerce/static/css/main.css
@@ -8,8 +8,8 @@ h1,h2,h3,h4,h5,h6{
 
 .container{
 	min-width: 90%;
-	max-width: 90%;
-	min-height: calc(100vh - 265px);
+	max-width: 95%;
+	min-height: calc(100vh - 225px);
 }
 
 .logForm{
@@ -134,10 +134,10 @@ h1,h2,h3,h4,h5,h6{
 #navBarSearchForm{
 	min-width: 350px !important;
 	max-width: 500px;
+	max-height: 40px;
 }
 
 .navigationbtns{
-	border-bottom: medium;
 	width: 100%;
 	background-color: #4f868c!important;
 }
@@ -147,7 +147,7 @@ h1,h2,h3,h4,h5,h6{
 }
 
 .nav-item{
-	font-size: large;
+	font-size: normal;
 }
 
 .wrapper {
@@ -226,8 +226,14 @@ a[data-toggle="collapse"] {
     transform: translateY(-50%);
 }
 
+hr{
+	margin: 0px;
+}
+
 footer{
-	min-height: 60px;
+	margin-top: 40px;
+	min-height: 45px;
+	max-height: 45px;
 }
 
 @media (max-width: 768px) {
